# attrition-prediction

./: Dockerfile  README.md  WA_Fn-UseC_-HR-Employee-Attrition.csv  hr-employee-attrition  main.py  model_training.ipynb  predict.py  pyproject.toml  serve.py  train.py
