[project]
name = "attrition-prediction"
version = "0.1.0"
description = "Attrition prediction service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.2",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "typing>=3.10.0.0",
    "uvicorn>=0.38.0",
    "wget>=3.2",
]
